Complete read booking
